Changes in html-linters

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
   <!-- ====================Navbar Header================ -->
-<head class= "header">
+<header class= "header">
+
   <nav class="nav-container">
 
     <a><img src="https://www.smashingmagazine.com/images/logo--full.svg" 
@@ -53,7 +54,8 @@
     </div>
 
   </div>
-</head>
+
+</header>
  <!-- =======================Main Section================ -->
   <main class="main">
 
@@ -67,7 +69,7 @@
         </div>
         <p class="para">
           Build and deploy an<br>angular form with netlify <br>forms and edge 
-          <span class="grid-comment"><iclass="material-icons">comments</i> 
+          <span class="grid-comment"><i class="material-icons"></i>comments 
             leave a comment</span>
         </p>
         <div class="mini-flex-hash">
@@ -159,7 +161,7 @@
       <div class="cat-text">
 
         <p>
-          All you want is a<bold> fast, secure web</bold>? That's why we use ad 
+          All you want is a<strong> fast, secure web</strong>? That's why we use ad 
           blockers, too, you know. We gotta keep those servers running though... 
           So we've set up<a href="#"> Membership</a> for smart cookies like you.
           Coming up next:
@@ -172,7 +174,7 @@
         <ul>
 
           <li>Smashing TV Session with Marc Edwards on “<a href="#">
-              <bold>All About Icons</bold>
+              <strong>All About Icons</strong>
             </a>”,</li>
           <li>New discounts on tools, services and tutorials,</li>
           <li>...plus a seasoned selection of fancy cats.</li>
@@ -640,19 +642,18 @@
 
           <h4>BROWSE ALL SMASHING MAGAZINE TOPICS</h4>
 
-          <ul class="lots-ofLinks">
-
+          <ul class="lots-ofLinks footer-line1-links">
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Accessibility</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Android</a>&nbsp;</li>
-            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Animation</a>&nbsp;</li>
-            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Animation</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Animation</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Apps</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> CSS</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Design</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Design Patterns</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Design Systems</a>&nbsp;</li>
-            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> E-Commerce</a>&nbsp;</li><br>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> E-Commerce</a>&nbsp;</li>
+          </ul>
+          <ul class="lots-ofLinks">
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Freebies</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Graphics</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> HTML</a>&nbsp;</li>
@@ -662,7 +663,9 @@
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> JavaScript</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Mobile</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Pattern Libraries</a>&nbsp;</li>
-            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Performance</a>&nbsp;</li><br>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Performance</a>&nbsp;</li>
+          </ul>
+          <ul class="lots-ofLinks">
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Photoshop</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Plugins</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> React</a>&nbsp;</li>
@@ -671,13 +674,14 @@
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Sketch</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Typography</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> UI</a>&nbsp;</li>
-            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Usability</a>&nbsp;</li><br>
+            <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Usability</a>&nbsp;</li>
+          </ul>
+          <ul class="lots-ofLinks">
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> User Experience</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Wallpapers</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Web Design</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> WordPress</a>&nbsp;</li>
             <li><span class="bulletP"><img src="images/bullet.svg" alt="bullet point"></span><a href="#"> Workflow</a>&nbsp;</li>
-
           </ul>
 
           <p class="foot-para"><span class="foot-para-italic">With a commitment to 
