Changes in HTML-linters

--- a/index.html
+++ b/index.html
@@ -699,15 +699,15 @@
           </div>
 
           <ul class="last-links">
-
             <li>✎<a href="#">Write for us</a>&nbsp;&nbsp;</li>
             <li><a href="#">Contact us</a>&nbsp;&nbsp;</li>
             <li><a href="#">About us(Impressum)</a>&nbsp;&nbsp;</li>
-            <li><a href="#">Privacy policy</a>&nbsp;&nbsp;</li><br>
+            <li><a href="#">Privacy policy</a>&nbsp;&nbsp;</li>
+          </ul>
+          <ul class="last-links row-2">
             <li><a href="#">Membership login</a>&nbsp;&nbsp;</li>
             <li><a href="#">Delivery times</a>&nbsp;&nbsp;</li>
             <li><a href="#">Advertise</a>&nbsp;&nbsp;</li>
-
           </ul>
 
         </div>
